# ant-farm

./: .gitignore  Building.cpp  Building.h  BuildingManager.cpp  BuildingManager.h  CMakeLists.txt  CoordsUtils.cpp  CoordsUtils.h  NeedsEnum.h  Person.cpp  Person.h  RequirementEnum.cpp  RequirementEnum.h  StatesEnum.cpp  StatesEnum.h  main.cpp
